# re-tools

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  build.bat  build.sh
cmake/: FindCapstone.cmake
core/: Cargo.toml  pyproject.toml
core/analyzer/include/: analyzer.h
core/analyzer/src/: diff.cpp  entropy.cpp  strings.cpp
core/disassembler/include/: disasm.h
core/disassembler/src/: x86_disasm.cpp
core/hexeditor/include/: hexeditor.h
core/hexeditor/src/: hexeditor.cpp
core/parser/include/: parser.h
core/parser/src/: elf_parser.cpp
core/src/: analyzer.rs  c_api.rs  cfg.rs  diff.rs  disasm.rs  error.rs  lib.rs  parser.rs  python_api.rs  tracer.rs  utils.rs
core/src/c_api/: api_data_flow.rs  api_dynamic.rs  api_ir.rs  api_static.rs  mod.rs
core/src/logic/: hybrid.rs  mod.rs
core/src/logic/data_flow/: chains.rs  liveness.rs  mod.rs  ssa.rs  tipe.rs  vsa.rs
core/src/logic/ir/: instruction.rs  lifter.rs  mod.rs  optimization.rs
core/src/logic/static_analysis/: analyzer.rs  binary.rs  cfg.rs  diff.rs  disasm.rs  hexeditor.rs  mod.rs  parser.rs
core/src/logic/static_analysis/decompiler/: ast.rs  mod.rs  printer.rs  structurer.rs
core/src/logic/tracer/: dta.rs  mod.rs  platform.rs  platform_linux.rs  platform_macos.rs  platform_unsupported.rs  platform_windows.rs  state.rs  types.rs
core/src/python_api/: api_data_flow.rs  api_ir.rs  api_static.rs  mod.rs
core/src/tracer/: mod.rs  platform_linux.rs  platform_unsupported.rs  platform_windows.rs  state.rs  types.rs
core/tracer/include/: tracer.h
core/tracer/src/: debugger.cpp  ptrace_linux.cpp  tracer_internal.h  win_debug.cpp
core_rs/: Cargo.toml
core_rs/src/: disasm.rs  lib.rs  parser.rs
docs/: BUILD.md
examples/: demo_workflow.py
include/: README
include/retools/: api.h  common.h  retools_abi.h  retools_advanced.h  retools_dynamic.h  retools_static.h  retools_types.h  types.h
interfaces/cli/: retools_cli.cpp
interfaces/cli/include/: cli_engine.h  cli_repl.h  cli_utils.h
interfaces/cli/src/: cli_engine.cpp  cli_repl.cpp  cli_utils.cpp  main.cpp
interfaces/python/: retools.py
interfaces/python/bindings/: advanced_tools.py  analyzer.py  disasm.py  hexeditor.py  parser.py  tracer.py
interfaces/python/scripts/: analyze.py  report.py  run_pipeline.py
interfaces/python/utils/: lib_loader.py
os_specific/linux/: ptrace_helpers.cpp  ptrace_helpers.h
os_specific/windows/: winapi_helpers.cpp  winapi_helpers.h
scripts/: generate_prompt.py  run_analysis.sh
src/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/binary_parser/: CMakeLists.txt
src/modules/binary_parser/include/: binary_parser.h
src/modules/binary_parser/src/: binary_parser.cpp
src/modules/disassembler/: CMakeLists.txt
src/modules/disassembler/include/: disassembler.h
src/modules/disassembler/src/: disassembler.cpp
src/modules/llm_client/: CMakeLists.txt
src/modules/llm_client/include/: llm_client.h
src/modules/llm_client/src/: llm_client.cpp
src/modules/prompt_builder/: CMakeLists.txt
src/modules/prompt_builder/include/: prompt_builder.h
src/modules/prompt_builder/src/: prompt_builder.cpp
src/modules/reporting/: CMakeLists.txt
src/modules/reporting/include/: reporting.h
src/modules/reporting/src/: reporting.cpp
src/modules/utils/: CMakeLists.txt
src/modules/utils/include/: utils.h
src/modules/utils/src/: utils.cpp
tests/: CMakeLists.txt  test_binary_parser.cpp  test_disassembler.cpp  test_llm_client.cpp  test_prompt_builder.cpp
tests/analyzer/: testHitungEntropy.cpp
tests/cpp/: target_dummy.cpp  test_dynamic.cpp  test_static.cpp
tests/disassembler/: testDecodeInstruksi.cpp
tests/hexeditor/: testLihatBytes.cpp
tests/integration/: test_full_cpp_integration.cpp  test_full_python_pipeline.py
tests/interfaces/cli/: test_cli_tool.cpp
tests/interfaces/python/: test_python_pipeline.py
tests/parser/: testParseBinaryHeader.cpp  testParseHeaderElf.cpp
tests/python/: test_integration.py
tests/tools/binaryDiff/: testDiffBinary.cpp
tests/tools/cfgVisualizer/: testGenerateCFG.cpp
tests/tracer/: testAttachProses.cpp
tools/binaryDiff/include/: binary_diff.h
tools/binaryDiff/src/: binary_diff.cpp
tools/cfgVisualizer/include/: cfg.h
tools/cfgVisualizer/src/: cfg_visualizer.cpp
