[package]
name = "re_tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
python-bindings = ["pyo3"]

[dependencies]
libc = "0.2.155"
capstone = "0.12.0"
goblin = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6.5"
encoding_rs = "0.8.33"
regex = "1.10.5"
memchr = "2.7.4"
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
log = "0.4.28"
yara = { version = "0.29.0", default-features = false, features = ["vendored", "bundled-4_5_2"] }
memmap2 = "0.9.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28.0", features = ["ptrace", "process", "uio"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.28.0", features = ["ptrace", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Kernel"
] }