[package]
name = "core_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.155"
capstone = "0.12.0"
goblin = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28.0", features = ["ptrace", "uio", "process", "signal"] } 

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory"
] }